# sam2

./: .gitignore  INSTALL.md  a.py  pyproject.toml
notebooks/: automaskgen_no_images.ipynb  remove_images.py
sam2/: automatic_mask_generator.py
sam2/utils/: amg.py
