[project]
name = "sam2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hydra-core>=1.3.2",
    "iopath>=0.1.10",
    "matplotlib>=3.10.1",
    "nbformat>=5.10.4",
    "pillow>=11.2.1",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]


[tool.uv.sources]
torch = [
    { index = "pytorch-cu" },
]
torchvision = [
    { index = "pytorch-cu" },
]

[[tool.uv.index]]
name = "pytorch-cu"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
